--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 </head>
 <body>
     
-<div class="main">
-    <button class="plus">+</button>
-    <p class="counter">0</p>
-    <button class="minus">-</button>
+<div class="bb">
+
+<ul class="bList"></ul>
+
+<button class="addBlock" >
+add block
+</button>
+
 </div>
 
     <script src="public/main.js"></script>
