--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
 </head>
 <body>
     
-<div class="main">
-    <button class="plus">+</button>
-    <p class="counter">0</p>
-    <button class="minus">-</button>
-</div>
+<div class="major" >
+    <ul class="palitra" >
 
+    </ul>
+
+<p class="txt">
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequa
+    tur unde voluptatibus molestias repellendus. Et repellen
+    dus, doloremque saepe architecto autem repudiandae, r
+    epellat quia ea, provident ad vitae optio fuga ipsa. Neque.
+</p>
+
+</div>
     <script src="public/main.js"></script>
 </body>
 </html>
