--- a/index.html
+++ b/index.html
@@ -9,11 +9,30 @@
 </head>
 <body>
     
-<div class="main">
-    <button class="plus">+</button>
-    <p class="counter">0</p>
-    <button class="minus">-</button>
-</div>
+<div class="boss">
+<p class="textForCom">
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+    Id odio, nam quas quaerat asperiores corporis 
+    laborum reprehenderit, nostrum nobis quisquam, 
+    cupiditate sunt accusantium expedita eius 
+    minus soluta at magni! Voluptatem.
+</p>
+
+<label>
+    Name: <input class="name" type="text">
+    </label>
+    
+    <label>
+        Comment: <input class="comment" type="text">
+    </label>
+
+    <button class="addComBut"> Add comment</button>
+
+    <div class="comments">
+
+    </div>
+</div >
+
 
     <script src="public/main.js"></script>
 </body>
