--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 </head>
 <body>
     
-<div class="main">
-    <button class="plus">+</button>
-    <p class="counter">0</p>
-    <button class="minus">-</button>
-</div>
+    <input class="countryInput" type="text">
+    <div class="suggestions"></div>
+
 
     <script src="public/main.js"></script>
 </body>
